[gd_scene load_steps=11 format=2]

[ext_resource path="res://mainmenu/dfab39347955ef4c94bbe6dd9316929c.jpg" type="Texture" id=1]
[ext_resource path="res://Picsart_23-09-29_11-48-44-888.png" type="Texture" id=2]
[ext_resource path="res://logo.png" type="Texture" id=3]
[ext_resource path="res://startbutton.png" type="Texture" id=4]
[ext_resource path="res://about/aboutbutton.png" type="Texture" id=5]
[ext_resource path="res://level1 run/aboutpress.png" type="Texture" id=6]
[ext_resource path="res://level1 run/startprees.png" type="Texture" id=7]
[ext_resource path="res://mainmenu/Mainmenu.gd" type="Script" id=8]
[ext_resource path="res://introo karakter/introo karakter/XPT5HRY-video-game.mp3" type="AudioStream" id=9]
[ext_resource path="res://level1 run/EXIT.png" type="Texture" id=10]

[node name="Mainmenu" type="Node2D"]
script = ExtResource( 8 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 650.272, 342 )
scale = Vector2( -2.30493, 1.80451 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Sprite" parent="."]
position = Vector2( 660, 269 )
scale = Vector2( 0.766667, 0.705903 )
texture = ExtResource( 2 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 86.125, 69.5 )
scale = Vector2( 0.0578808, 0.0541992 )
texture = ExtResource( 3 )

[node name="start" type="TouchScreenButton" parent="."]
position = Vector2( 61, 538 )
normal = ExtResource( 4 )
pressed = ExtResource( 7 )

[node name="about" type="TouchScreenButton" parent="."]
position = Vector2( 476, 538 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Quit" type="Button" parent="."]
margin_left = 916.0
margin_top = 541.0
margin_right = 1203.0
margin_bottom = 590.0
expand_icon = true

[node name="Quit" type="TouchScreenButton" parent="Quit"]
position = Vector2( -25, -3 )
normal = ExtResource( 10 )
pressed = ExtResource( 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="about" to="." method="_on_about_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
